--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-redux": "^4.0.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.5"
   }
 }
