--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server/server.js",
     "build": "NODE_ENV=development webpack --progress --colors --watch --watch-poll"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.1",
     "express": "^4.15.4",
+    "nodemailer": "^4.1.0",
     "react": "^15.4",
     "react-dom": "^15.6.1",
-    "react-router": "2.2.4",
     "react-redux": "^5.0.6",
+    "react-router": "2.2.4",
     "redux": "^3.7.2"
   },
   "devDependencies": {
