--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server.js",
     "build": "NODE_ENV=development webpack --progress --colors --watch --watch-poll"
   },
   "author": "",
@@ -36,6 +36,7 @@
     "less-loader": "^4.0.5",
     "npm": "^5.3.0",
     "react-router-redux": "^4.0.8",
+    "react-select": "^1.0.0-rc.10",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "url-loader": "^0.5.9",
