--- a/.eslintrc
+++ b/.eslintrc
@@ -11,8 +11,9 @@
   "rules": {
     "no-unused-vars": 1,
     "no-undef": 1,
-    "no-debugger": 0,
-    "no-console": 0,
+    "no-debugger": 1,
+    "no-console": 1,
+    "no-useless-escape": 0,
     "new-cap": 0,
     "strict": 0,
     "no-underscore-dangle": 0,
