--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "build": "NODE_ENV=development webpack --progress --colors --watch --watch-poll"
+    "build": "NODE_ENV=development webpack --progress --colors --watch --watch-poll",
+    "buildProd": "NODE_ENV=production webpack --progress --colors --watch --watch-poll"
   },
   "author": "",
   "license": "ISC",
